--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <title>A simple JS counter</title>
+    <script src="counter.js" defer></script>
   </head>
   <body>
     <div class="main-app">
@@ -20,8 +21,9 @@
       </header>
       <main>
         <div class="counter"><span class="number">999</span></div>
-        <div class="counter-section">
+        <div class="btn-section">
           <span class="counter-btn minus">-</span>
+          <span class="counter-btn reset">reset</span>
           <span class="counter-btn plus">+</span>
         </div>
       </main>
