first-version-complete

--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
       <main>
         <div class="counter"><span class="number">999</span></div>
         <div class="btn-section">
-          <span class="counter-btn minus">-</span>
-          <span class="counter-btn reset">reset</span>
-          <span class="counter-btn plus">+</span>
+          <div class="first-wrapper">
+            <span class="counter-btn minus">-</span>
+            <span class="counter-btn plus">+</span>
+          </div>
+          <div class="second-wrapper">
+            <span class="counter-btn reset">reset</span>
+          </div>
         </div>
       </main>
     </div>
