create elements with JS setup

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <h1>A simple JS counter</h1>
       </header>
       <main>
-        <div class="counter"><span class="number">999</span></div>
-        <div class="btn-section">
+        <div class="counter-wrapper"><span class="number">999</span></div>
+        <div class="btn-wrapper">
           <div class="first-wrapper">
             <span class="counter-btn minus">-</span>
             <span class="counter-btn plus">+</span>
