first working version

--- a/index.html
+++ b/index.html
@@ -16,21 +16,7 @@
   </head>
   <body>
     <div class="main-app">
-      <header>
-        <h1>A simple JS counter</h1>
-      </header>
-      <main>
-        <div class="counter-wrapper"><span class="number">999</span></div>
-        <div class="btn-wrapper">
-          <div class="first-wrapper">
-            <span class="counter-btn minus">-</span>
-            <span class="counter-btn plus">+</span>
-          </div>
-          <div class="second-wrapper">
-            <span class="counter-btn reset">reset</span>
-          </div>
-        </div>
-      </main>
+      <!-- Elements created with JavaScript are here -->
     </div>
   </body>
 </html>
